<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.navigationcomponentdemo.screens.SecretFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="casual"
        android:text="@string/this_is_secret_place"/>

    <Button
        android:id="@+id/btn_go_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_secret"/>

    <Button
        android:id="@+id/btn_close_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_the_whole_box"/>

</LinearLayout>